Make sure StreamElement GoTo button is visible when event is current

--- a/frontend/src/pages/Player/StreamElement/StreamElement.module.scss
+++ b/frontend/src/pages/Player/StreamElement/StreamElement.module.scss
@@ -23,17 +23,6 @@
 
 .card {
     cursor: pointer;
-    //     margin-top: var(--size-medium);
-}
-
-.currentStreamElement {
-    .goToButton {
-        color: var(--color-primary-background);
-
-        svg {
-            fill: var(--color-primary-background);
-        }
-    }
 }
 
 .eventTime {
